fix bug overflow on link

--- a/src/webapp/src/assets/scss/_navtabs.scss
+++ b/src/webapp/src/assets/scss/_navtabs.scss
@@ -9,6 +9,7 @@
     .mat-tab-links{
         width: 100%;
         .mat-tab-link{
+            overflow: initial !important;
             &:nth-child(2){
                 width: 100%;
                 text-align: center;
